--- a/src/screens/header/Header.css
+++ b/src/screens/header/Header.css
@@ -1,25 +1,26 @@
 .menu_dropdown {
-
-  position: fixed;
-  left: 8.3%;  
-  background-color: #326e51;
-  padding: 16px;
+  position: absolute;
+   left: 7%;
+   right: 0;
+  transform: translateX(-100%);
+  background-color: #f9d9ea;
   margin-top: 8px;
-  width: var(--container-7xl);
+  width: 86%; /* hoặc dùng giá trị cố định bạn muốn */
   box-shadow: none;
   border: 1px solid;
   border-top: none;
   border-color: #f0efed !important;
   overflow: hidden;
-  z-index: 1000;     /* Đảm bảo dropdown luôn ở trên */
+  z-index: 1000;
   opacity: 0;
   animation: fadeSlideDown 0.3s ease-in-out forwards;
 }
 
+
 @keyframes fadeSlideDown {
   0% {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateY(-100px);
   }
   100% {
     opacity: 1;
